--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-    "name": "todo4aldi",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-      "dev": "vite",
-      "build": "tsc && vite build",
-      "preview": "vite preview"
-    },
-    "devDependencies": {
-      "typescript": "~5.7.2",
-      "vite": "^6.2.1"
-    }
+  "name": "todo4aldi",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "^3.2.3",
+    "@vitest/ui": "^3.2.3",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.1",
+    "vitest": "^3.2.3"
   }
+}
